[gd_scene load_steps=15 format=4 uid="uid://dd74js0myad6u"]

[ext_resource type="Texture2D" uid="uid://de3yn704ckd5a" path="res://art/walls.png" id="1_40k76"]
[ext_resource type="Script" uid="uid://d4ed3e1xj804w" path="res://scripts/gamemanager.gd" id="1_q85tm"]
[ext_resource type="Texture2D" uid="uid://cjvtcyqy8ly5g" path="res://art/character.png" id="2_dylta"]
[ext_resource type="Script" uid="uid://d24joftmn8mvh" path="res://scripts/character.gd" id="2_q85tm"]
[ext_resource type="PackedScene" uid="uid://djabrh1x2b8m2" path="res://scenes/trap_door.tscn" id="3_xkbh3"]
[ext_resource type="Script" uid="uid://fcnv45foxism" path="res://scripts/transporter_area.gd" id="5_fwly5"]
[ext_resource type="Script" uid="uid://b2cd8b8vkdglu" path="res://scripts/HUD.gd" id="7_mulil"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q85tm"]
texture = ExtResource("1_40k76")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_fwly5"]
resource_name = "trapdoor"
scenes/2/scene = ExtResource("3_xkbh3")

[sub_resource type="TileSet" id="TileSet_fwly5"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_q85tm")
sources/1 = SubResource("TileSetScenesCollectionSource_fwly5")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dylta"]
radius = 13.0
height = 32.0

[sub_resource type="Animation" id="Animation_fwly5"]
resource_name = "falling"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xkbh3"]
_data = {
&"falling": SubResource("Animation_fwly5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q85tm"]
size = Vector2(81, 38)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_q85tm")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAAAAAAAAAAAAAADAAAAAAABAAAAAAACAAEAAAAAAAAAAAADAAEAAAABAAAAAAADAAIAAAABAAAAAAADAAMAAAABAAAAAAACAAQAAAAAAAAAAAADAAQAAAABAAAAAAACAAUAAAAAAAAAAAADAAUAAAABAAAAAAACAAYAAAAAAAAAAAADAAYAAAABAAAAAAACAAcAAAAAAAAAAAADAAcAAAABAAAAAAACAAgAAAAAAAAAAAADAAgAAAABAAAAAAACAAkAAAAAAAAAAAADAAkAAAABAAAAAAACAAoAAAAAAAAAAAADAAoAAAABAAAAAAACAAsAAAAAAAAAAAADAAsAAAABAAAAAAACAAwAAAAAAAAAAAADAAwAAAABAAAAAAACAA0AAAAAAAAAAAADAA0AAAABAAAAAAACAA4AAAAAAAAAAAADAA4AAAABAAAAAAAAAAAAAAACAAAAAAABAAAAAAACAAAAAAABAAEAAAACAAAAAAAAAAEAAAACAAAAAAAAAAIAAAACAAAAAAAAAAMAAAACAAAAAAAAAAQAAAACAAAAAAAAAAUAAAACAAAAAAAAAAYAAAACAAAAAAAAAAcAAAACAAAAAAAAAAgAAAACAAAAAAAAAAkAAAACAAAAAAABAAkAAAACAAAAAAABAAgAAAACAAAAAAABAAcAAAACAAAAAAABAAYAAAACAAAAAAABAAUAAAACAAAAAAABAAQAAAACAAAAAAABAAMAAAACAAAAAAABAAIAAAACAAAAAAAAAAoAAAACAAAAAAAAAAsAAAACAAAAAAAAAAwAAAACAAAAAAAAAA0AAAACAAAAAAAAAA4AAAACAAAAAAABAA4AAAACAAAAAAABAA0AAAACAAAAAAABAAwAAAACAAAAAAABAAsAAAACAAAAAAABAAoAAAACAAAAAAAFAA4AAAACAAAAAAAEAA4AAAACAAAAAAAEAA0AAAACAAAAAAAFAA0AAAACAAAAAAAFAAwAAAACAAAAAAAEAAwAAAACAAAAAAAEAAsAAAACAAAAAAAEAAoAAAACAAAAAAAFAAoAAAACAAAAAAAFAAsAAAACAAAAAAAEAAkAAAACAAAAAAAEAAgAAAACAAAAAAAFAAkAAAACAAAAAAAFAAgAAAACAAAAAAAFAAcAAAACAAAAAAAFAAYAAAACAAAAAAAFAAUAAAACAAAAAAAEAAcAAAACAAAAAAAEAAYAAAACAAAAAAAEAAUAAAACAAAAAAAEAAQAAAACAAAAAAAFAAQAAAACAAAAAAAFAAMAAAACAAAAAAAFAAIAAAACAAAAAAAFAAEAAAACAAAAAAAEAAAAAAACAAAAAAAEAAEAAAACAAAAAAAEAAIAAAACAAAAAAAEAAMAAAACAAAAAAAFAAAAAAACAAAAAAAAAP//AAACAAAAAAABAP//AAACAAAAAAABAP7/AAACAAAAAAABAP3/AAACAAAAAAABAPz/AAACAAAAAAAAAPz/AAACAAAAAAAAAPv/AAACAAAAAAABAPv/AAACAAAAAAAAAP3/AAACAAAAAAAAAP7/AAACAAAAAAAEAP//AAACAAAAAAAEAP7/AAACAAAAAAAEAP3/AAACAAAAAAAEAPz/AAACAAAAAAAEAPv/AAACAAAAAAAFAPv/AAACAAAAAAAFAPz/AAACAAAAAAAFAP3/AAACAAAAAAAFAP7/AAACAAAAAAAFAP//AAACAAAAAAACAP//AAAAAAAAAAADAP//AAABAAAAAAACAP7/AAAAAAAAAAADAP7/AAABAAAAAAACAP3/AAAAAAAAAAADAP3/AAABAAAAAAACAPz/AAAAAAAAAAADAPz/AAABAAAAAAACAPv/AAAAAAAAAAADAPv/AAABAAAAAAAAAA8AAAACAAAAAAAAABAAAAACAAAAAAABABAAAAACAAAAAAABABEAAAACAAAAAAABABIAAAACAAAAAAABABMAAAACAAAAAAABAA8AAAACAAAAAAAAABEAAAACAAAAAAAAABIAAAACAAAAAAAAABMAAAACAAAAAAAAABQAAAACAAAAAAAAABUAAAACAAAAAAAAABYAAAACAAAAAAAAABcAAAACAAAAAAAAABgAAAACAAAAAAAAABkAAAACAAAAAAAAABoAAAACAAAAAAAAABsAAAACAAAAAAAAABwAAAACAAAAAAAAAB0AAAACAAAAAAABAB0AAAACAAAAAAABABwAAAACAAAAAAABABsAAAACAAAAAAABABoAAAACAAAAAAABABkAAAACAAAAAAABABgAAAACAAAAAAABABcAAAACAAAAAAABABYAAAACAAAAAAABABUAAAACAAAAAAABABQAAAACAAAAAAAEAA8AAAACAAAAAAAFAA8AAAACAAAAAAAFABAAAAACAAAAAAAFABEAAAACAAAAAAAFABIAAAACAAAAAAAFABMAAAACAAAAAAAFABQAAAACAAAAAAAFABUAAAACAAAAAAAFABYAAAACAAAAAAAFABcAAAACAAAAAAAFABgAAAACAAAAAAAFABkAAAACAAAAAAAEABcAAAACAAAAAAAEABYAAAACAAAAAAAEABUAAAACAAAAAAAEABQAAAACAAAAAAAEABMAAAACAAAAAAAEABIAAAACAAAAAAAEABEAAAACAAAAAAAEABAAAAACAAAAAAAEABgAAAACAAAAAAAEABkAAAACAAAAAAAEABoAAAACAAAAAAAEABsAAAACAAAAAAAEABwAAAACAAAAAAAEAB0AAAACAAAAAAAEAB4AAAACAAAAAAAFAB4AAAACAAAAAAAFAB0AAAACAAAAAAAFABwAAAACAAAAAAAFABsAAAACAAAAAAAFABoAAAACAAAAAAABAB4AAAACAAAAAAAAAB4AAAACAAAAAAACAA8AAAAAAAAAAAADAA8AAAABAAAAAAACABAAAAAAAAAAAAADABAAAAABAAAAAAACABEAAAAAAAAAAAADABEAAAABAAAAAAACABIAAAAAAAAAAAADABIAAAABAAAAAAACABMAAAAAAAAAAAADABMAAAABAAAAAAACABQAAAAAAAAAAAADABQAAAABAAAAAAACABUAAAAAAAAAAAADABUAAAABAAAAAAACABYAAAAAAAAAAAADABYAAAABAAAAAAACABcAAAAAAAAAAAADABcAAAABAAAAAAACABgAAAAAAAAAAAADABgAAAABAAAAAAACABkAAAAAAAAAAAADABkAAAABAAAAAAACABoAAAAAAAAAAAADABoAAAABAAAAAAACABsAAAAAAAAAAAADABsAAAABAAAAAAACABwAAAAAAAAAAAADABwAAAABAAAAAAACAB0AAAAAAAAAAAADAB0AAAABAAAAAAACAB4AAAAAAAAAAAADAB4AAAABAAAAAAAAAB8AAAACAAAAAAAAACAAAAACAAAAAAAAACEAAAACAAAAAAAAACIAAAACAAAAAAAAACMAAAACAAAAAAAAACQAAAACAAAAAAAAACUAAAACAAAAAAAAACYAAAACAAAAAAAAACcAAAACAAAAAAAAACgAAAACAAAAAAAAACkAAAACAAAAAAAAACoAAAACAAAAAAAAACsAAAACAAAAAAAAACwAAAACAAAAAAAAAC0AAAACAAAAAAAAAC4AAAACAAAAAAAAAC8AAAACAAAAAAAAADAAAAACAAAAAAAAADEAAAACAAAAAAAAADIAAAACAAAAAAAAADMAAAACAAAAAAAAADQAAAACAAAAAAAAADUAAAACAAAAAAAAADYAAAACAAAAAAAAADcAAAACAAAAAAAAADgAAAACAAAAAAAAADkAAAACAAAAAAAAADoAAAACAAAAAAAAADsAAAACAAAAAAAAADwAAAACAAAAAAAAAD0AAAACAAAAAAAAAD4AAAACAAAAAAAAAD8AAAACAAAAAAAAAEAAAAACAAAAAAAAAEEAAAACAAAAAAAAAEIAAAACAAAAAAAAAEMAAAACAAAAAAAAAEQAAAACAAAAAAAAAEUAAAACAAAAAAAAAEYAAAACAAAAAAAAAEcAAAACAAAAAAAAAEgAAAACAAAAAAABAB8AAAACAAAAAAABACAAAAACAAAAAAABACEAAAACAAAAAAABACIAAAACAAAAAAABACMAAAACAAAAAAABACQAAAACAAAAAAABACUAAAACAAAAAAABACYAAAACAAAAAAABACcAAAACAAAAAAABACgAAAACAAAAAAABACkAAAACAAAAAAABACoAAAACAAAAAAABACsAAAACAAAAAAABACwAAAACAAAAAAABAC0AAAACAAAAAAABAC4AAAACAAAAAAABAC8AAAACAAAAAAABADAAAAACAAAAAAABADEAAAACAAAAAAABADIAAAACAAAAAAABADMAAAACAAAAAAABADQAAAACAAAAAAABADUAAAACAAAAAAABADYAAAACAAAAAAABADcAAAACAAAAAAABADgAAAACAAAAAAABADkAAAACAAAAAAABADoAAAACAAAAAAABADsAAAACAAAAAAABADwAAAACAAAAAAABAD0AAAACAAAAAAABAD4AAAACAAAAAAABAD8AAAACAAAAAAABAEAAAAACAAAAAAABAEEAAAACAAAAAAABAEIAAAACAAAAAAABAEMAAAACAAAAAAABAEQAAAACAAAAAAABAEUAAAACAAAAAAABAEYAAAACAAAAAAABAEcAAAACAAAAAAABAEgAAAACAAAAAAAEAB8AAAACAAAAAAAEACAAAAACAAAAAAAEACEAAAACAAAAAAAEACIAAAACAAAAAAAEACMAAAACAAAAAAAEACQAAAACAAAAAAAEACUAAAACAAAAAAAEACYAAAACAAAAAAAEACcAAAACAAAAAAAEACgAAAACAAAAAAAEACkAAAACAAAAAAAEACoAAAACAAAAAAAEACsAAAACAAAAAAAEACwAAAACAAAAAAAEAC0AAAACAAAAAAAEAC4AAAACAAAAAAAEAC8AAAACAAAAAAAEADAAAAACAAAAAAAEADEAAAACAAAAAAAEADIAAAACAAAAAAAEADMAAAACAAAAAAAEADQAAAACAAAAAAAEADUAAAACAAAAAAAEADYAAAACAAAAAAAEADcAAAACAAAAAAAEADgAAAACAAAAAAAEADkAAAACAAAAAAAEADoAAAACAAAAAAAEADsAAAACAAAAAAAEADwAAAACAAAAAAAEAD0AAAACAAAAAAAEAD4AAAACAAAAAAAEAD8AAAACAAAAAAAEAEAAAAACAAAAAAAEAEEAAAACAAAAAAAEAEIAAAACAAAAAAAEAEMAAAACAAAAAAAEAEQAAAACAAAAAAAEAEUAAAACAAAAAAAEAEYAAAACAAAAAAAEAEcAAAACAAAAAAAEAEgAAAACAAAAAAAFAB8AAAACAAAAAAAFACAAAAACAAAAAAAFACEAAAACAAAAAAAFACIAAAACAAAAAAAFACMAAAACAAAAAAAFACQAAAACAAAAAAAFACUAAAACAAAAAAAFACYAAAACAAAAAAAFACcAAAACAAAAAAAFACgAAAACAAAAAAAFACkAAAACAAAAAAAFACoAAAACAAAAAAAFACsAAAACAAAAAAAFACwAAAACAAAAAAAFAC0AAAACAAAAAAAFAC4AAAACAAAAAAAFAC8AAAACAAAAAAAFADAAAAACAAAAAAAFADEAAAACAAAAAAAFADIAAAACAAAAAAAFADMAAAACAAAAAAAFADQAAAACAAAAAAAFADUAAAACAAAAAAAFADYAAAACAAAAAAAFADcAAAACAAAAAAAFADgAAAACAAAAAAAFADkAAAACAAAAAAAFADoAAAACAAAAAAAFADsAAAACAAAAAAAFADwAAAACAAAAAAAFAD0AAAACAAAAAAAFAD4AAAACAAAAAAAFAD8AAAACAAAAAAAFAEAAAAACAAAAAAAFAEEAAAACAAAAAAAFAEIAAAACAAAAAAAFAEMAAAACAAAAAAAFAEQAAAACAAAAAAAFAEUAAAACAAAAAAAFAEYAAAACAAAAAAAFAEcAAAACAAAAAAAFAEgAAAACAAAAAAACAB8AAAAAAAAAAAADAB8AAAABAAAAAAACACAAAAAAAAAAAAADACAAAAABAAAAAAACACEAAAAAAAAAAAADACEAAAABAAAAAAACACIAAAAAAAAAAAADACIAAAABAAAAAAACACMAAAAAAAAAAAADACMAAAABAAAAAAACACQAAAAAAAAAAAADACQAAAABAAAAAAACACUAAAAAAAAAAAADACUAAAABAAAAAAACACYAAAAAAAAAAAADACYAAAABAAAAAAACACcAAAAAAAAAAAADACcAAAABAAAAAAACACgAAAAAAAAAAAADACgAAAABAAAAAAACACkAAAAAAAAAAAADACkAAAABAAAAAAACACoAAAAAAAAAAAADACoAAAABAAAAAAACACsAAAAAAAAAAAADACsAAAABAAAAAAACACwAAAAAAAAAAAADACwAAAABAAAAAAACAC4AAAAAAAAAAAADAC4AAAABAAAAAAACAC8AAAAAAAAAAAADAC8AAAABAAAAAAACADAAAAAAAAAAAAADADAAAAABAAAAAAACADEAAAAAAAAAAAADADEAAAABAAAAAAACADIAAAAAAAAAAAADADIAAAABAAAAAAACADMAAAAAAAAAAAADADMAAAABAAAAAAACADQAAAAAAAAAAAADADQAAAABAAAAAAACADUAAAAAAAAAAAADADUAAAABAAAAAAACADYAAAAAAAAAAAADADYAAAABAAAAAAACADcAAAAAAAAAAAADADcAAAABAAAAAAACADgAAAAAAAAAAAADADgAAAABAAAAAAACADkAAAAAAAAAAAADADkAAAABAAAAAAACADoAAAAAAAAAAAADADoAAAABAAAAAAACADsAAAAAAAAAAAADADsAAAABAAAAAAACADwAAAAAAAAAAAADADwAAAABAAAAAAACAD0AAAAAAAAAAAADAD0AAAABAAAAAAACAD4AAAAAAAAAAAADAD4AAAABAAAAAAACAD8AAAAAAAAAAAADAD8AAAABAAAAAAACAEAAAAAAAAAAAAADAEAAAAABAAAAAAACAEEAAAAAAAAAAAADAEEAAAABAAAAAAACAEIAAAAAAAAAAAADAEIAAAABAAAAAAACAEMAAAAAAAAAAAADAEMAAAABAAAAAAACAEQAAAAAAAAAAAADAEQAAAABAAAAAAACAEUAAAAAAAAAAAADAEUAAAABAAAAAAACAEYAAAAAAAAAAAADAEYAAAABAAAAAAACAEcAAAAAAAAAAAADAEcAAAABAAAAAAACAEgAAAAAAAAAAAADAEgAAAABAAAAAAADAC0AAAABAAAAAAACAC0AAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_fwly5")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACACEAAQAAAAAAAgACAAcAAQAAAAAAAgA=")
tile_set = SubResource("TileSet_fwly5")

[node name="Character" type="Node2D" parent="."]
position = Vector2(96, 20)

[node name="Player" type="CharacterBody2D" parent="Character"]
unique_name_in_owner = true
script = ExtResource("2_q85tm")

[node name="Sprite2D" type="Sprite2D" parent="Character/Player"]
texture = ExtResource("2_dylta")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Character/Player"]
shape = SubResource("CapsuleShape2D_dylta")

[node name="Camera2D" type="Camera2D" parent="Character/Player"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character/Player"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_xkbh3")
}

[node name="TransporterArea" type="Area2D" parent="."]
position = Vector2(93, 1960)
script = ExtResource("5_fwly5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransporterArea"]
position = Vector2(4, -119)
shape = SubResource("RectangleShape2D_q85tm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_mulil")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="GameTimeLabel" type="Label" parent="CanvasLayer/Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "00:20"

[node name="GameScoreLabel" type="Label" parent="CanvasLayer/Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "00:20"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="DeathText" type="Label" parent="CanvasLayer/Control/MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "You died.
Press \"r\" to try again"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="TransporterArea" to="." method="_on_transporter_area_body_entered"]
